fix bug width overflow screen width

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
     body,
     #root {
         @apply flex flex-col items-center
-            w-screen min-h-screen
+            w-full min-h-screen
             m-0 bg-indigo-300 dark:bg-gray-900
             text-gray-800 dark:text-white antialiased;
         font-family: "Noto Sans JP", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -304,7 +304,7 @@
 
     .container-challenge {
         @apply flex flex-col justify-start items-center gap-4
-            w-screen md:h-full min-h-screen
+            w-full md:h-full min-h-screen
             bg-indigo-200 dark:bg-gray-900
             text-gray-800 dark:text-white;
         main {
